# OmniXAI

./: Dockerfile  pyproject.toml  test.py
devai/explainers/tabular/agnostic/: shap2.py
