[tool.poetry]
name = "devai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
omnixai = "1.2.5"
xgboost = "^1.7.5"
shap = "^0.41.0"
numpy = "1.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
